--- a/akhiro_config.json
+++ b/akhiro_config.json
@@ -1,8 +1,10 @@
 {
   "botName": "AkhiroBot",
-  "botPrefix": "/",
+  "botPrefix": ".",
   "botOwner": "AkhiroDev",
   "contact": "https://facebook.com/certainly.francis",
   "botDev": "AkhiroDev & Yu3Bot & LiANE",
-  "botAdmins": []
+  "botAdmins": [
+    "100065652852284"
+  ]
 }
